; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_submodule.c_test_worktree_submodule__open_discovered_submodule_worktree.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_submodule.c_test_worktree_submodule__open_discovered_submodule_worktree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@child = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_submodule__open_discovered_submodule_worktree() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = alloca i32*, align 8
  %3 = bitcast %struct.TYPE_6__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_6__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %4 = load i32*, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @child, i32 0, i32 0), align 8
  %5 = call i32 @git_repository_workdir(i32* %4)
  %6 = call i32 @git_repository_discover(%struct.TYPE_6__* %1, i32 %5, i32 0, i32* null)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @git_repository_open(i32** %2, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @child, i32 0, i32 0), align 8
  %13 = call i32 @git_repository_workdir(i32* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @git_repository_workdir(i32* %14)
  %16 = call i32 @cl_assert_equal_s(i32 %13, i32 %15)
  %17 = call i32 @git_buf_dispose(%struct.TYPE_6__* %1)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @git_repository_free(i32* %18)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_repository_discover(%struct.TYPE_6__*, i32, i32, i32*) #2

declare dso_local i32 @git_repository_workdir(i32*) #2

declare dso_local i32 @git_repository_open(i32**, i32) #2

declare dso_local i32 @cl_assert_equal_s(i32, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_6__*) #2

declare dso_local i32 @git_repository_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
